--- a/css/master.css
+++ b/css/master.css
@@ -69,6 +69,10 @@ img {
   color: #f1f1f1;
 }
 
+.tx-gray {
+  color: #adadad;
+}
+
 .tx-viseyeblue {
   color: #498fff;
 }
@@ -79,18 +83,6 @@ img {
 
 .tx-dgray {
   color: #111111;
-}
-
-.center {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.justify-center {
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
 }
 
 .tmar-small {
@@ -118,7 +110,6 @@ img {
 }
 
 .app {
-  height: calc(100vh);
   background-color: #000000;
   background-image: url('https://source.unsplash.com/random/3840x2160');
   background-position: center;
@@ -128,16 +119,20 @@ img {
 }
 
 .container {
-  height: 100%;
-  padding-left: calc(15vw);
-  padding-right: calc(15vw);
-  padding-top: calc(15vh);
-  padding-bottom: calc(15vh);
+  height: calc(100vh);
+  padding-left: calc(20vw);
+  padding-right: calc(20vw);
   background: rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .landingbox {
-  padding: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 80px;
+  padding-bottom: 80px;
   -webkit-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.25);
   -moz-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.25);
   box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.25);
@@ -151,7 +146,14 @@ img {
 }
 
 .landingbox p {
-  font-size: 24px;
   font-family: 'Product Sans Light';
   font-weight: 400;
+}
+
+.p {
+  font-size: 24px;
+}
+
+.ps {
+  font-size: 18px;
 }
