--- a/css/upload_function.css
+++ b/css/upload_function.css
@@ -2,13 +2,28 @@
   font-family: "Verdana", "Arial", serif;
   text-align: center;
   width: 140px;
-  height: 24px;
+  height: 40px;
   padding: 10px;
-  border-style: dotted;
+  margin: 4px;
   border-color: black;
   border-radius: 10px;
+  background-color: white;
+}
+
+#list{
+  font-family: "Verdana", "Arial", serif;
+  text-align: center;
+  width: 140px;
+  height: 40px;
+  padding: 10px;
+  margin: 4px;
+  border-color: black;
+  border-radius: 10px;
+  background-color: white;
 }
 
 #upload_box{
   background-color: white;
+  padding: 40px;
+
 }
