--- a/css/csvtovis.css
+++ b/css/csvtovis.css
@@ -53,4 +53,8 @@ text {
 #tooltip {
   opacity:0;
   position: absolute;
+  padding: 5px;
+  width: 200px;
+  height: 28px;
+  pointer-events: none;
 }
