--- a/css/csvtovis.css
+++ b/css/csvtovis.css
@@ -54,7 +54,13 @@ text {
   opacity:0;
   position: absolute;
   padding: 5px;
-  width: 200px;
-  height: 28px;
   pointer-events: none;
+  color: black;
+  font-family: sans-serif;
+  font-size: 0.6em;
+  font-weight: bold;
+  box-shadow: 5px -5px 5px rgba(0, 0, 0, 0.5);
+  background-color: white;
+  border-radius: 4px;
 }
+
