--- a/public/static/css/master.css
+++ b/public/static/css/master.css
@@ -131,6 +131,17 @@ img {
   font-weight: 400;
 }
 
+.selectMenu {
+  padding: 10px;
+  color: #000000;
+  border: 0px;
+  font-size: 16px;
+  font-family: 'Product Sans Regular';
+  font-weight: 400;
+  border-radius: 3px;
+  text-align-last: center;
+}
+
 .button {
   padding: 10px;
   color: #ffffff;
