--- a/css/AttentionVis.css
+++ b/css/AttentionVis.css
@@ -45,3 +45,28 @@ text {
   font-size: 3em;
   fill: #8E8883;
 }
+
+.vis {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  align-items: center;
+  width: 100vw;
+}
+.vis > div {
+  --margin: 1em;
+  margin: var(--margin)
+}
+#scatterPlot {
+  flex: 3 0 calc(75% - var(--margin));
+}
+
+#mini {
+  flex: 1 0 calc(25% - var(--margin));
+}
+
+.apperture {
+    /* Occupy the full viewport */
+    width: 100%;
+    height: 100%;
+}
