--- a/css/ScatterVis.css
+++ b/css/ScatterVis.css
@@ -1,6 +1,11 @@
 body {
-  margin: 0px;
+  margin: 0;
   overflow: hidden;
+  position: fixed;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
 }
 
 circle {
@@ -144,4 +149,29 @@ text {
   stroke: #000;
   stroke-opacity: 0.5;
   stroke-width: 1.25px;
+}
+
+.vis {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  align-items: center;
+  width: 100vw;
+}
+.vis > div {
+  --margin: 1em;
+  margin: var(--margin)
+}
+#attentionMap {
+  flex: 3 0 calc(75% - var(--margin));
+}
+
+#mini {
+  flex: 1 0 calc(25% - var(--margin));
+}
+
+.apperture {
+    /* Occupy the full viewport */
+    width: 100%;
+    height: 100%;
 }
