--- a/css/ScatterVis.css
+++ b/css/ScatterVis.css
@@ -158,11 +158,13 @@ text {
   align-items: center;
   width: 100vw;
 }
+
 .vis > div {
   --margin: 1em;
   margin: var(--margin)
 }
-#attentionMap {
+
+#scatterPlot {
   flex: 3 0 calc(75% - var(--margin));
 }
 
