--- a/css/ScatterVis.css
+++ b/css/ScatterVis.css
@@ -172,7 +172,7 @@ text {
   flex: 1 0 calc(25% - var(--margin));
 }
 
-.apperture {
+.aperture {
     /* Occupy the full viewport */
     width: 100%;
     height: 100%;
