Fixed plot menus
Menus need some beautification, but they do be working now. Also, I fixed the Loading screen and loading times :+1:

--- a/public/static/css/master.css
+++ b/public/static/css/master.css
@@ -291,6 +291,11 @@ img {
   margin-left: auto;
 }
 
+.height-fix {
+  margin-top: -20px;
+  margin-bottom: -20px;
+}
+
 .visrow {
     display: -webkit-box;
     display: -ms-flexbox;
