--- a/public/static/css/master.css
+++ b/public/static/css/master.css
@@ -198,6 +198,18 @@ img {
   background-color: #27921d;
 }
 
+.button-orange {
+  background-color: #e66f1a;
+}
+
+.button-orange:hover {
+  background-color: #c96219;
+}
+
+.button-orange:active {
+  background-color: #ad5718;
+}
+
 .uploadbutton {
   display: none;
 }
