--- a/css/ScatterVis.css
+++ b/css/ScatterVis.css
@@ -73,83 +73,6 @@ text {
   fill: #8E8883;
 }
 
-#play-button {
-  position: absolute;
-  top: 0px;
-  left: 310px;
-  background: #f08080;
-  padding-right: 26px;
-  border-radius: 3px;
-  border: none;
-  color: white;
-  margin: 0;
-  padding: 0 12px;
-  width: 60px;
-  cursor: pointer;
-  height: 25px;
-}
-
-#checkBox_id {
-  position: absolute;
-  top: 0px;
-  left: 205px;
-  color: white;
-  width: 20px;
-  height: 20px;
-}
-
-#labelCheckBox {
-  position: absolute;
-  top: 6px;
-  left: 230px;
-}
-
-
-#cumulativeCheck-Box {
-  position: absolute;
-  top: 5px;
-  left: 45px;
-}
-
-#play-button:hover {
-  background-color: #696969;
-}    
-
-.ticks {
-  font-size: 28px;
-}
-
-.track,
-.track-inset,
-.track-overlay {
-  stroke-linecap: round;
-}
-
-.track {
-  stroke: #000;
-  stroke-opacity: 0.3;
-  stroke-width: 10px;
-}
-
-.track-inset {
-  stroke: #dcdcdc;
-  stroke-width: 8px;
-}
-
-.track-overlay {
-  pointer-events: stroke;
-  stroke-width: 50px;
-  stroke: transparent;
-  cursor: crosshair;
-}
-
-.handle {
-  fill: #fff;
-  stroke: #000;
-  stroke-opacity: 0.5;
-  stroke-width: 1.25px;
-}
-
 .vis {
   display: flex;
   justify-content: space-around;
@@ -300,7 +223,7 @@ h2 { color: #111;
   line-height: 15px;
 }
 
-.slider {
+.range {
   -webkit-appearance: none;
   width: 100%;
   height: 15px;
@@ -312,7 +235,7 @@ h2 { color: #111;
   transition: opacity .2s;
 }
 
-.slider::-webkit-slider-thumb {
+.range::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 25px;
@@ -322,10 +245,38 @@ h2 { color: #111;
   cursor: pointer;
 }
 
-.slider::-moz-range-thumb {
+.range::-moz-range-thumb {
   width: 25px;
   height: 25px;
   border-radius: 50%;
   background: #4CAF50;
   cursor: pointer;
+}
+
+.bubble { 
+  position: absolute;
+  background-image: linear-gradient(#444444, #999999);
+  width: 40px; 
+  height: 30px; 
+  text-align: center; 
+  color: white; 
+  border-radius: 10px; 
+  display: inline-block; 
+  font: bold 15px/30px Georgia;
+  bottom: 175%;
+  left: 0;
+}
+
+.bubble::after { 
+  content: "";
+  position: absolute; 
+  width: 0;
+  height: 0;
+  border-top: 10px solid #999999;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  margin-top: -1px;
 }
