--- a/public/static/css/master.css
+++ b/public/static/css/master.css
@@ -454,88 +454,71 @@ img {
   width: 100%;
 }
 
-input[type=range] {
-  height: 24px;
+input[type="range"] { 
+  margin: auto;
   -webkit-appearance: none;
-  margin: 10px 0;
-}
-input[type=range]:focus {
-  outline: none;
-}
-input[type=range]::-webkit-slider-runnable-track {
-  height: 9px;
+  position: relative;
+  overflow: hidden;
+  height: 20px;
   cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 0px 0px 0px #000000;
-  background: #FFFFFF;
-  border-radius: 50px;
-  border: 0px solid #000000;
+  border-radius: 3px; /* iOS */
 }
-input[type=range]::-webkit-slider-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 0px solid #000000;
-  height: 18px;
-  width: 18px;
-  border-radius: 50px;
-  background: #498FFF;
-  cursor: pointer;
+
+::-webkit-slider-runnable-track {
+  background: #ddd;
+}
+
+/*
+* 1. Set to 0 width and remove border for a slider without a thumb
+*/
+::-webkit-slider-thumb {
   -webkit-appearance: none;
-  margin-top: -4.5px;
+  width: 20px; /* 1 */
+  height: 20px;
+  background: #fff;
+  box-shadow: -100vw 0 0 100vw #498fff;
 }
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #FFFFFF;
+
+::-moz-range-track {
+  height: 20px;
+  background: #ddd;
 }
-input[type=range]::-moz-range-track {
-  height: 9px;
-  cursor: pointer;
-  animate: 0.2s;
-  box-shadow: 0px 0px 0px #000000;
-  background: #FFFFFF;
-  border-radius: 50px;
-  border: 0px solid #000000;
+
+::-moz-range-thumb {
+  background: #fff;
+  height: 20px;
+  width: 20px;
+  border-radius: 0 !important;
+  box-shadow: -100vw 0 0 100vw #498fff;
+  box-sizing: border-box;
 }
-input[type=range]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px #000000;
-  border: 0px solid #000000;
-  height: 18px;
-  width: 18px;
-  border-radius: 50px;
-  background: #498FFF;
-  cursor: pointer;
+
+::-ms-fill-lower { 
+  background: #498fff;
 }
-input[type=range]::-ms-track {
-  height: 9px;
-  cursor: pointer;
-  animate: 0.2s;
-  background: transparent;
-  border-color: transparent;
+
+::-ms-thumb { 
+  background: #fff;
+  height: 20px;
+  width: 20px;
+  box-sizing: border-box;
+}
+
+::-ms-ticks-after { 
+  display: none; 
+}
+
+::-ms-ticks-before { 
+  display: none; 
+}
+
+::-ms-track { 
+  background: #ddd;
   color: transparent;
+  height: 20px;
+  border: none;
 }
-input[type=range]::-ms-fill-lower {
-  background: #FFFFFF;
-  border: 0px solid #000000;
-  border-radius: 100px;
-  box-shadow: 0px 0px 0px #000000;
-}
-input[type=range]::-ms-fill-upper {
-  background: #FFFFFF;
-  border: 0px solid #000000;
-  border-radius: 100px;
-  box-shadow: 0px 0px 0px #000000;
-}
-input[type=range]::-ms-thumb {
-  margin-top: 1px;
-  box-shadow: 0px 0px 0px #000000;
-  border: 0px solid #000000;
-  height: 18px;
-  width: 18px;
-  border-radius: 50px;
-  background: #498FFF;
-  cursor: pointer;
-}
-input[type=range]:focus::-ms-fill-lower {
-  background: #FFFFFF;
-}
-input[type=range]:focus::-ms-fill-upper {
-  background: #FFFFFF;
+
+::-ms-tooltip { 
+  display: none;
 }
