--- a/css/ScatterVis.css
+++ b/css/ScatterVis.css
@@ -8,10 +8,6 @@ body {
   left:0;
 }
 
-circle {
-  opacity: 0.6;
-}
-
 circle:hover {
   fill: red;
 }
@@ -253,7 +249,7 @@ h2 { color: #111;
   cursor: pointer;
 }
 
-.bubble { 
+[class*='bubble'] { 
   position: absolute;
   background-image: linear-gradient(#444444, #999999);
   width: 40px; 
@@ -267,7 +263,7 @@ h2 { color: #111;
   left: 0;
 }
 
-.bubble::after { 
+[class*='bubble']::after { 
   content: "";
   position: absolute; 
   width: 0;
