Attention & gaze are done now, scatter & alp have bugs >:(

--- a/public/static/css/master.css
+++ b/public/static/css/master.css
@@ -519,6 +519,11 @@ input[type="range"] {
   border: none;
 }
 
+::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 ::-ms-tooltip { 
   display: none;
 }
