--- a/public/static/css/master.css
+++ b/public/static/css/master.css
@@ -467,6 +467,21 @@ input[type="range"] {
   box-shadow: 0px 0px 0px 1px rgba(26,26,26,1);
 }
 
+input[type="number"] {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  color: #000000;
+  border: 0px;
+  font-size: 16px;
+  font-family: 'Product Sans Regular';
+  font-weight: 400;
+  border-radius: 3px;
+  text-align-last: center;
+  -webkit-box-shadow: 0px 0px 0px 1px rgba(26,26,26,1);
+  -moz-box-shadow: 0px 0px 0px 1px rgba(26,26,26,1);
+  box-shadow: 0px 0px 0px 1px rgba(26,26,26,1);
+}
+
 ::-webkit-slider-runnable-track {
   background: #ddd;
 }
